crates/aven-check/tests/fixtures/check/valid/polymorphic-top-level-value.av
id = (x) => x
a = id(1)
b = id("hi")
useA : Int = a
useB : Text = b
