crates/aven-check/tests/fixtures/check/invalid/polymorphic-local-block-result.av
result : Int =
  id = (x) => x
  helper = id(1)
  id("hi")
